--- a/sass/blocks/gallery.scss
+++ b/sass/blocks/gallery.scss
@@ -179,7 +179,7 @@ div.photo__text {
 
 .photo__text--name {
   display: inline-block;
-  font-family: "OpenSans bold", sans-serif;
+  font-family: "OpenSans bold", Arial, sans-serif;
   color: $gray;
   line-height: 24px;
   font-size: 14px;
@@ -311,7 +311,7 @@ div.photo__text {
   padding-left: 19px;
   padding-top: 6px;
   background-color: $pink;
-  font-family: "OpenSans bold", sans-serif;
+  font-family: "OpenSans bold", Arial, sans-serif;
   color: $white;
   font-size: 12px;
   font-weight: 700;
