--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -157,7 +157,7 @@
 
 .main-nav__item {
   list-style: none;
-  font-family: "OpenSans bold", sans-serif;
+  font-family: "OpenSans bold", Arial, sans-serif;
   font-weight: 700;
   color: $white;
   text-transform: uppercase;
