--- a/sass/blocks/promo.scss
+++ b/sass/blocks/promo.scss
@@ -79,7 +79,7 @@
 }
 
 .promo__header {
-  font-family: 'OpenSans light', sans-serif;
+  font-family: 'OpenSans light', Arial, sans-serif;
   color: $gray;
   font-size: 24px;
   font-weight: 300;
@@ -132,7 +132,7 @@
 }
 
 .promo__feature-slogan {
-  font-family: "OpenSans bold", sans-serif;
+  font-family: "OpenSans bold", Arial, sans-serif;
   color: $black;
   font-size: 18px;
   font-weight: 700;
