--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -11,6 +11,14 @@
   }
 }
 
+.page-footer::after {
+  @media ($mobile-widths) {
+    content: '';
+    display: table;
+    clear: both;
+  }
+}
+
 .page-footer--index {
   @media ($mobile-widths) {
     display: none;
@@ -29,6 +37,9 @@
 }
 
 .page-footer--photo {
+  @media ($mobile-widths-only) {
+    padding-top: 20px;
+  }
   @media ($desktop-widths) {
     height: 120px;
     margin-top: 108px;
@@ -54,7 +65,6 @@
 }
 
 .footer-logo {
-  margin-left: 86px;
   @media ($tablet-widths) {
     width: 190px;
     float: left;
@@ -104,6 +114,12 @@
   }
 }
 
+.footer-socnet::after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
 .page-footer--photo > .footer-socnet {
   @media ($tablet-widths) {
     margin-top: -37px;
@@ -123,7 +139,6 @@
 
 .icon-twitter {
   float: left;
-  content: "";
   display: block;
   width: 18px;
   height: 18px;
@@ -131,6 +146,10 @@
   top: 36px;
   left: 48px;
   fill: $pink;
+  z-index: 100;
+  &:active {
+    fill: rgba(210, 40, 86, 0.3);
+  }
   @media ($tablet-widths) {
     left: 7px;
   }
@@ -138,7 +157,6 @@
 
 .icon-facebook {
   float: left;
-  content: "";
   display: block;
   width: 18px;
   height: 18px;
@@ -146,6 +164,10 @@
   top: 34px;
   left: 42px;
   fill: $pink;
+  z-index: 100;
+  &:active {
+    fill: rgba(210, 40, 86, 0.3);
+  }
   @media ($tablet-widths) {
     left: 0;
   }
@@ -153,7 +175,6 @@
 
 .icon-youtube {
   float: left;
-  content: "";
   display: block;
   width: 15px;
   height: 15px;
@@ -161,6 +182,10 @@
   top: 36px;
   left: 39px;
   fill: $pink;
+  z-index: 100;
+  &:active {
+    fill: rgba(210, 40, 86, 0.3);
+  }
   @media ($tablet-widths) {
     left: -1px;
   }
@@ -177,6 +202,42 @@
   position: relative;
   top: 19px;
   left: 13px;
+  z-index: 90;
+  @media ($tablet-widths) {
+    left: -29px;
+  }
+}
+
+.footer-socnet__icons--icon-twitter:hover::after {
+  content: "";
+  float: left;
+  display:block;
+  width: 45px;
+  height: 45px;
+  border: 3px solid $gray;
+  border-radius: 50%;
+  position: relative;
+  top: 19px;
+  left: 13px;
+  z-index: 90;
+  @media ($tablet-widths) {
+    left: -29px;
+  }
+}
+
+.footer-socnet__icons--icon-twitter:active::after {
+  content: "";
+  float: left;
+  display:block;
+  width: 45px;
+  height: 45px;
+  border: 3px solid #e9ebec;
+  border-radius: 50%;
+  position: relative;
+  top: 19px;
+  left: 13px;
+  opacity: 0.3;
+  z-index: 90;
   @media ($tablet-widths) {
     left: -29px;
   }
@@ -193,6 +254,42 @@
   position: relative;
   top: 19px;
   left: 7px;
+  z-index: 90;
+  @media ($tablet-widths) {
+    left: -35px;
+  }
+}
+
+.footer-socnet__icons--icon-facebook:hover::after {
+  content: "";
+  float: left;
+  display: block;
+  width: 45px;
+  height: 45px;
+  border: 3px solid $gray;
+  border-radius: 50%;
+  position: relative;
+  top: 19px;
+  left: 7px;
+  z-index: 90;
+  @media ($tablet-widths) {
+    left: -35px;
+  }
+}
+
+.footer-socnet__icons--icon-facebook:active::after {
+  content: "";
+  float: left;
+  display: block;
+  width: 45px;
+  height: 45px;
+  border: 3px solid #e9ebec;
+  border-radius: 50%;
+  position: relative;
+  top: 19px;
+  left: 7px;
+  opacity: 0.3;
+  z-index: 90;
   @media ($tablet-widths) {
     left: -35px;
   }
@@ -209,6 +306,42 @@
   position: relative;
   top: 19px;
   left: 4px;
+  z-index: 90;
+  @media ($tablet-widths) {
+    left: -35px;
+  }
+}
+
+.footer-socnet__icons--icon-youtube:hover::after {
+  content: "";
+  float: left;
+  display: block;
+  width: 45px;
+  height: 45px;
+  border: 3px solid $gray;
+  border-radius: 50%;
+  position: relative;
+  top: 19px;
+  left: 4px;
+  z-index: 90;
+  @media ($tablet-widths) {
+    left: -35px;
+  }
+}
+
+.footer-socnet__icons--icon-youtube:active::after {
+  content: "";
+  float: left;
+  display: block;
+  width: 45px;
+  height: 45px;
+  border: 3px solid #e9ebec;
+  border-radius: 50%;
+  position: relative;
+  top: 19px;
+  left: 4px;
+  opacity: 0.3;
+  z-index: 90;
   @media ($tablet-widths) {
     left: -35px;
   }
@@ -258,6 +391,13 @@
 }
 
 .footer-copyright__logo-htmlacademy svg {
+  fill: $pink;
+  &:hover {
+    fill: $gray;
+  }
+  &:active {
+    opacity: 0.3;
+  }
   @media ($tablet-widths) {
     position: relative;
     left: -37px;
@@ -267,10 +407,6 @@
   }
 }
 
-//.page-footer--form {
-//  top: -90px;
-//}
-
 @media ($mobile-widths-only) {
   .logo-pink-blue-desktop,
   .logo-pink-blue-tablet {
@@ -278,9 +414,35 @@
   }
   .logo-pink-blue-mobile {
     display: block;
+    width: 146px;
+    height: 40px;
     margin-left: 86px;
     margin-top: -20px;
-    margin-bottom: -18px;
+    margin-bottom: 0;
+    fill: $gray;
+    &:hover {
+      fill: $pink;
+    }
+    &:active {
+      fill: $gray;
+      opacity: 0.3;
+    }
+  }
+}
+
+.page-footer--form .logo-pink-blue-mobile {
+  @media ($mobile-widths-only) {
+    position: relative;
+    top: 2px;
+    margin-bottom: 23px;
+  }
+}
+
+.page-footer--photo .logo-pink-blue-mobile {
+  @media ($mobile-widths-only) {
+    position: relative;
+    top: 2px;
+    margin-bottom: 23px;
   }
 }
 
@@ -293,6 +455,14 @@
     display: block;
     width: 146px;
     height: 40px;
+    fill: $gray;
+    &:hover {
+      fill: $pink;
+    }
+    &:active {
+      fill: $gray;
+      opacity: 0.3;
+    }
   }
 }
 
@@ -306,5 +476,13 @@
     width: 146px;
     height: 40px;
     margin-left: 92px;
+    fill: $gray;
+    &:hover {
+      fill: $pink;
+    }
+    &:active {
+      fill: $gray;
+      opacity: 0.3;
+    }
   }
 }
