--- a/sass/global/fonts.scss
+++ b/sass/global/fonts.scss
@@ -4,24 +4,24 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('/fonts/opensans.woff') format('woff'),
-  url('/fonts/opensans.woff2') format('woff2');
+  src: url('../fonts/opensans.woff') format('woff'),
+  url('../fonts/opensans.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'Open Sans regular';
-  src: url('/fonts/opensansregular.woff') format('woff'),
-  url('/fonts/opensansregular.woff2') format('woff2');
+  src: url('../fonts/opensansregular.woff') format('woff'),
+  url('../fonts/opensansregular.woff2') format('woff2');
 }
 
 @font-face {
   font-family: "OpenSans light";
-  src: url('/fonts/opensanslight.woff') format('woff'),
-  url('/fonts/opensanslight.woff2') format('woff2');
+  src: url('../fonts/opensanslight.woff') format('woff'),
+  url('../fonts/opensanslight.woff2') format('woff2');
 }
 
 @font-face {
   font-family: "OpenSans bold";
-  src: url('/fonts/opensansbold.woff') format('woff'),
-  url('/fonts/opensansbold.woff2') format('woff2');
+  src: url('../fonts/opensansbold.woff') format('woff'),
+  url('../fonts/opensansbold.woff2') format('woff2');
 }
